Fix exception problem on opening realms gui